crates/rome_formatter/tests/specs/prettier/v8_intrinsic/intrinsic_call.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: intrinsic_call.js

---
# Input
```js
function doSmth()     {
            %DebugPrint
        (
                foo )
  }

    function printFunc  (
        f
) {
    if(%
    IsAsmWasmCode(f))              console.log("asm.js");
        if(

        % IsWasmCode(
        f))
            console.log (
                "wasm"
            );

    console.log
    (%
        GetFunctioName(f)
        );
}

```

# Output
```js
function doSmth()     {
            %DebugPrint
        (
                foo )
  }

    function printFunc  (
        f
) {
    if(%
    IsAsmWasmCode(f))              console.log("asm.js");
        if(

        % IsWasmCode(
        f))
            console.log (
                "wasm"
            );

    console.log
    (%
        GetFunctioName(f)
        );
}

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '%DebugPrint
        (
                foo )
  }'
  ┌─ intrinsic_call.js:2:13
  │  
2 │ ┌             %DebugPrint
3 │ │         (
4 │ │                 foo )
5 │ │   }
  │ └───^ Expected a statement here

error[SyntaxError]: expected `'}'` but instead the file ends
   ┌─ intrinsic_call.js:25:1
   │
25 │ 
   │ ^ the file ends here


```


